[tool.poetry]
name = "s"
version = "0.1.0"
description = ""
authors = ["ricky <ricky@riicky.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.27.1"
loguru = "^0.6.0"
tqdm = "^4.64.0"
spacy = "^3.3.0"
pandas = "^1.4.2"
geopy = "^2.2.0"
tenacity = "^8.0.1"
apsw = "^3.38.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
click = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
